--- a/Cascading.org
+++ b/Cascading.org
@@ -17,11 +17,12 @@ Donc en résumé, en entrée l'on prend en entrée un set de transitions $<s_i,a
 #+begin_src python :tangle Cascading.py
 from LAFEM import *
 from numpy import *
+from a2str import *
 import scipy.linalg
 
 def run( D, psi, phi, Actions ):
     "Run the cascading algorithm"
-    omega_q = classif_score( D, phi, Actions )
+    omega_q = classif_score( map( lambda sasre:sasre[0:2], D ), phi, Actions )
     q = lambda s,a : dot( omega_q.transpose(), phi( s, a ) )
     D_E = shape_for_E_regression( D, q, psi )
     D_C = shape_for_C_regression( D, q, psi, Actions )
@@ -39,16 +40,16 @@ def classif_score( D, phi, Actions ):
         Threshold = 0.1 #Sensible default
         T = 40 #Sensible default
         A = Actions
+        dicPi_E = {}
         def __init__( self ):
             s_0 = D[0][0]
             a_0 = D[0][1]
             self.theta_0 = zeros( phi( s_0, a_0 ).shape )
+            #FIXME factoriser ce qui suit (optimisation de la fonction l et fonction l naive)
+            for sa in D:
+                dicPi_E[ l2str( sa[0] )] = sa[1]
         def l( self, s, a ):
-            try:
-                filter( lambda sa : all(sa[0] == s) and all(sa[1] == a), self.data )[0] #Same action as the expert
-                return 0
-            except IndexError: #The action of the expert was different from a
-                return 1
+            return 0 if all( dicPi_E[ l2str( s )] == a ) else 1
         def mu_E( self, s, a ):
             return phi( s, a )
         def alpha( self, t):
@@ -58,43 +59,77 @@ def classif_score( D, phi, Actions ):
 
 def regression( data ):
     "When given data of the form [[x,y]...] returns \omega to that \omega^Tx = y, almost"
+    #FIXME: La dimension de Y (1) est codee en dur; Avant de regler ce probleme il faut se mettre d'accord partout, dans l'integralite du code, sur des conventions vecteurs lignes, vecteurs colonnes, matrices etc. Je suggere que tout soit des matrices, comme dans la GSL en C.
+    dicXY = {} #We average the y when multiple datapoints for the same x are given
+    for x,y in data:
+        try:
+            dicXY[l2str(x)].append( y )
+        except KeyError:
+            dicXY[l2str(x)] = [y]
+    lstXY = map( lambda x :[fromstring(x,sep="\t"),sum( dicXY[x])/float(len(dicXY[x]))],dicXY )
     #The formula is omega = (X^TX)^{-1}X^TY
-    X = zeros(( len( data ), data[0][0].shape[1] ))
-    Y = zeros(( len( data ), data[0][1].shape[1] ))
-    for i in range(0,len(data)):
-        X[i,:] = data[i][0]
-        Y[i,:] = data[i][1]
+    X = zeros(( len( lstXY ), len(lstXY[0][0]) ))
+    Y = zeros(( len( lstXY ), 1 ))
+    for i in range(0,len(lstXY)):
+        X[i,:] = lstXY[i][0]
+        Y[i,:] = lstXY[i][1]
     #FIXME Achtung regularisation
     return dot( dot( scipy.linalg.inv( dot( X.transpose(), X ) +0.1*identity( X.shape[1] )), X.transpose() ) , Y)
 
 def shape_for_E_regression( D, q, psi ):
-    "Given data of the form [[s,a],...,[s,a]], returns the matrix [[psi(s)^T,q(s,a)-gamma*q(s',a')],...]"
+    "Given data of the form [[s,a,s',eoe],...,[s,a,s',eoe]], returns the matrix [[psi(s)^T,q(s,a)-gamma*q(s',a')],...]"
     def hatR( sasa ):
         s = sasa[0]
         a = sasa[1]
         ss = sasa[2]
         aa = sasa[3]
-        return [ psi( s ).transpose(), q(s,a) - 0.9*q( ss, aa )] #FIXME: hard coded gamma
+        return [ psi( s ).transpose()[0], (q(s,a) - 0.9*q( ss, aa ))[0]] #FIXME: hard coded gamma
     return map( hatR, shape_as_sasa( D ) )
 
 def shape_for_C_regression( D, q, psi, Actions ):
-    "Given data of the form [[s,a],...,[s,a]], returns the matrix [[psi(s)^T,q(s,a)-gamma*q(s',a*)],...]"
+    "Given data of the form [[s,a,s',eoe],...,[s,a,s',eoe]], returns the matrix [[psi(s)^T,q(s,a)-gamma*q(s',a*)],...]"
     def hatR( sasa ):
         s = sasa[0]
         a = sasa[1]
         ss = sasa[2]
         astar = max( [ [ss,x] for x in Actions ], key=lambda sa : q( sa[0], sa[1] ) )[1]
-        return [ psi( s ).transpose(), q(s,a) - 0.9*q( ss, astar )] #FIXME: hard coded gamma
+        return [ psi( s ).transpose()[0], (q(s,a) - 0.9*q( ss, astar ))[0]] #FIXME: hard coded gamma
     return map( hatR, shape_as_sasa( D ) )
 
 
 def shape_as_sasa( D ):
-    "Given data of the form [[s,a],...,[s,a]], returns data of the form [[s,a,s',a'],...]"
-    s = map( lambda sa: sa[0], D[0:-1] )
-    a = map( lambda sa: sa[1], D[0:-1] )
-    ss = map( lambda sa: sa[0], D[1:] ) #ss stands for s'
-    aa = map( lambda sa: sa[1], D[1:] ) #and aa for a'
-    return map( lambda x,y,z,t : [x,y,z,t], s, a, ss, aa )
+    "Given data of the form [[s,a,s',eoe],...,[s,a,s',eoe]], returns data of the form [[s,a,s',a'],...]"
+    episodes = []
+    answer = []
+    start_index = 0
+    while start_index < len( D ):
+        end_index = (i for i in range(start_index,len(D))if D[i][3] == 0).next() #till next eoe
+        episodes.append( D[start_index:end_index+1] )
+        start_index = end_index+1
+    for traj in episodes:
+        s = map( lambda sase: sase[0], traj )
+        a = map( lambda sase: sase[1], traj )
+        ss = map( lambda sase: sase[2], traj ) #ss stands for s'
+        aa = map( lambda sase: sase[1], traj[1:] ) #and aa for a'
+        #So, we now have :
+        # s     a     ss    aa
+        # s_1   a_1   s_2   a_2
+        # ...
+        # s_N-1 a_N-1 s_N   a_N
+        # s_N   a_N   s_N+1 
+        # The last line only has s,a,s' and no a'.
+        # If s_N = s_N+1, s_N==s_N+1 was certainly an absorbing state
+        # we can therefore add a_N+1 = a_N
+        # If not, then we have a truncated trajectory, and as there is
+        # no way to know what a_N+1 was, we drop s_N, a_N, s_N+1
+        if( all( s[-1] == ss[-1] ) ):
+            aa.extend(a[-1])
+        else:
+            s = s[:-1]
+            a = a[:-1]
+            ss = ss[:-1]
+        answer.extend( map( lambda x,y,z,t : [x,y,z,t], s, a, ss, aa ) )
+    return answer
 
 #+end_src
 #+srcname: Cascading_code_make
