--- a/Highway/Cascading_Exp1.org
+++ b/Highway/Cascading_Exp1.org
@@ -47,6 +47,86 @@ Cascading_Exp1: Cascading_Exp1.py Highway.py ../DP.py Mu_E.mat ../Cascading.py .
 
 #+end_src
 
+* Plotting
+#+begin_src python :tangle Cascading_Exp1_plot.py
+from matplotlib import rc
+rc('text', usetex=True)
+import sys
+sys.path+=['..']
+from numpy import *
+import scipy
+import pylab as pylab
+from Plot import *
+
+D_ANIRL = genfromtxt( "ANIRL_Exp6.mat" )
+D_Cascading = genfromtxt( "Cascading_Exp1.mat" )
+D_NE = D_Cascading[:,[0,1]]
+#D_NC = D_Cascading[:,[0,2]]
+D_IE = D_Cascading[:,[0,3]]
+#D_IC = D_Cascading[:,[0,4]]
+[XA,Y_meanA,Y_minA,Y_maxA] = mean_min_max( D_ANIRL )
+[XNE,Y_meanNE,Y_minNE,Y_maxNE] = mean_min_max( D_NE )
+#[XNC,Y_meanNC,Y_minNC,Y_maxNC] = mean_min_max( D_NC )
+[XIE,Y_meanIE,Y_minIE,Y_maxIE] = mean_min_max( D_IE )
+#[XIC,Y_meanIC,Y_minIC,Y_maxIC] = mean_min_max( D_IC )
+
+x_min = min(XA)
+x_max = max(XA)
+y_min = min( min(Y_minA), min(Y_minNE), min(Y_minIE) )
+Expert = 7.74390968*ones(XA.shape) #python Expert.py to get this value
+Random = -2.33080728*ones(XA.shape)#python Random.py to get this value
+y_max = 8 #Comme ca l'expert peut respirer
+y_min = min( Random[0],min(Y_minA), min(Y_minNE), min(Y_minIE) ) - 0.2
+
+
+#First plot, Cascading with natural features, alone
+pylab.figure(1)
+pylab.clf()
+pylab.axis([x_min,x_max,y_min,y_max])
+pylab.xlabel('Number of samples from the expert')
+pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
+#pylab.ylabel('Peformance')
+pylab.grid(True)
+filled_mean_min_max( pylab, XNE, Y_meanNE, Y_minNE, Y_maxNE, 'red',"Cascading IRL")
+pylab.plot(XA,Expert, color='blue',label="Expert",lw=2)
+pylab.plot(XA,Random, color='cyan',label="Agent trained on random reward",lw=2)
+pylab.legend(loc='center right')
+
+pylab.savefig('Cascading_Exp1_fig1.pdf')
+
+
+#Second plot, Cascading avec les features informatives, et ANIRL pour comparaison
+pylab.figure(2)
+pylab.clf()
+pylab.axis([x_min,x_max,y_min,y_max])
+pylab.xlabel('Number of samples from the expert')
+pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
+#pylab.ylabel('Peformance')
+pylab.grid(True)
+filled_mean_min_max( pylab, XIE, Y_meanIE, Y_minIE, Y_maxIE, 'red', "Cascading IRL")
+filled_mean_min_max( pylab, XA, Y_meanA, Y_minA, Y_maxA, 'green', "Abbeel \& Ng IRL")
+pylab.plot(XA,Expert, color='blue',label="Expert",lw=2)
+pylab.plot(XA,Random, color='cyan',label="Agent trained on random reward",lw=2)
+pylab.legend(loc='center right')
+pylab.savefig('Cascading_Exp1_fig2.pdf',transparent=True)
+
+#+end_src
+#+srcname: Cascading_Exp1_make
+#+begin_src makefile
+Cascading_Exp1_plot.py: Cascading_Exp1.org
+	$(call tangle,"Cascading_Exp1.org")
+
+Cascading_Exp1_fig1.pdf: Cascading_Exp1_plot.py Cascading_Exp1.mat ../Plot.py
+	python Cascading_Exp1_plot.py
+Cascading_Exp1_fig2.pdf: Cascading_Exp1_plot.py Cascading_Exp1.mat ../Plot.py
+	python Cascading_Exp1_plot.py
+
+
+../Plot.py:
+	make -C .. Plot.py
+
+#+end_src
+
 
 * Stuff
   #+srcname: Cascading_Exp1_clean_make
