--- a/Cascading.org
+++ b/Cascading.org
@@ -60,20 +60,14 @@ def classif_score( D, phi, Actions ):
 def regression( data ):
     "When given data of the form [[x,y]...] returns \omega to that \omega^Tx = y, almost"
     #FIXME: La dimension de Y (1) est codee en dur; Avant de regler ce probleme il faut se mettre d'accord partout, dans l'integralite du code, sur des conventions vecteurs lignes, vecteurs colonnes, matrices etc. Je suggere que tout soit des matrices, comme dans la GSL en C.
-    dicXY = {} #We average the y when multiple datapoints for the same x are given
-    for x,y in data:
-        try:
-            dicXY[l2str(x)].append( y )
-        except KeyError:
-            dicXY[l2str(x)] = [y]
-    lstXY = map( lambda x :[fromstring(x,sep="\t"),sum( dicXY[x])/float(len(dicXY[x]))],dicXY )
     #The formula is omega = (X^TX)^{-1}X^TY
-    X = zeros(( len( lstXY ), len(lstXY[0][0]) ))
-    Y = zeros(( len( lstXY ), 1 ))
-    for i in range(0,len(lstXY)):
-        X[i,:] = lstXY[i][0]
-        Y[i,:] = lstXY[i][1]
-    #FIXME Achtung regularisation
+    X = zeros(( len( data ), len(data[0][0]) ))
+    Y = zeros(( len( data ), 1 ))
+    for i in range(0,len(data)):
+        X[i,:] = data[i][0]
+        Y[i,:] = data[i][1]
+    #FIXME Achtung regularisation, lambda = 0.1
+    #FIXME Le coefficient de régularisation devrait être réglable
     return dot( dot( scipy.linalg.inv( dot( X.transpose(), X ) +0.1*identity( X.shape[1] )), X.transpose() ) , Y)
 
 def shape_for_E_regression( D, q, psi ):
